--- a/styles/style.scss
+++ b/styles/style.scss
@@ -48,6 +48,7 @@ body {
 
         .card-title {
             font-weight: 700;
+            font-size: 1.5em;
             text-align: center;
         }
 
